test(ms-catalogo): implementar pruebas unitarias EP3 con 100% de cobertura (HU-63)